tests/fsharp/typecheck/sigs/neg52.bsl

neg52.fs(21,15,21,18): typecheck error FS0438: Duplicate method. The method 'Bar' has the same name and signature as another method in type 'T' once tuples, functions, units of measure and/or provided types are erased.

neg52.fs(20,15,20,18): typecheck error FS0438: Duplicate method. The method 'Bar' has the same name and signature as another method in type 'T' once tuples, functions, units of measure and/or provided types are erased.

neg52.fs(18,15,18,19): typecheck error FS0438: Duplicate method. The method 'Bazz' has the same name and signature as another method in type 'T' once tuples, functions, units of measure and/or provided types are erased.

neg52.fs(17,15,17,19): typecheck error FS0438: Duplicate method. The method 'Bazz' has the same name and signature as another method in type 'T' once tuples, functions, units of measure and/or provided types are erased.

neg52.fs(15,15,15,18): typecheck error FS0438: Duplicate method. The method 'Foo' has the same name and signature as another method in type 'T' once tuples, functions, units of measure and/or provided types are erased.

neg52.fs(14,15,14,18): typecheck error FS0438: Duplicate method. The method 'Foo' has the same name and signature as another method in type 'T' once tuples, functions, units of measure and/or provided types are erased.
